# guider-event-bot-

./: .env  .env.example  .gitignore  .txt  README.md  SYSTEM_DESIGN.md  app.py  docker-compose.yml  event-flow-app.html  gemini_handler.py  requirements.txt  resume .txt
aibot_event management/: task  task.md
backend/: .env.example  __init__.py  alembic.ini  demo.py  pyproject.toml  requirements.txt
backend/aibot/: __init__.py  service.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py  seed.py
backend/app/api/: health.py  router.py
backend/app/api/v1/: router.py
backend/app/api/v1/endpoints/: admin.py  auth.py  checkin.py  events.py  invitations.py  orders.py  rsvps.py  tickets.py
backend/app/core/: config.py  security.py
backend/app/db/: base.py  deps.py  session.py
backend/app/models/: __init__.py  admin.py  event.py  invitation.py  order.py  rsvp.py  session.py  ticket.py  user.py
backend/app/schemas/: __init__.py  auth.py  commerce.py  common.py  event.py
backend/app/services/: auth.py  commerce.py  events.py
backend/luma/: __init__.py  service.py
backend/shared/: __init__.py  models.py  repository.py  security.py
backend/tests/: __init__.py  test_health.py  test_model.py
docs/: api-contract.yaml  backend-architecture.md  database-schema.sql  repo-structure.md
frontend/: next-env.d.ts  package.json  tsconfig.json
frontend/src/app/: globals.css  home-client.tsx  layout.tsx  page.tsx
frontend/src/lib/: api.ts
luma/: task.md
